@@ -67,6 +67,8 @@ Version 1.6.7
        was wrong for single files. (Stefan)
 - BUG: TortoiseIDiff didn't handel multi-page tiff images
        properly and could even crash. (Stefan)
+- BUG: SubWCRevCOM could only be used by one single application
+       at a time. (Stefan)
 
 Version 1.6.6
 - CHG: Reduced disk access in the status cache. (Stefan)
